fix(): text-align on index

--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,10 @@
     position: relative;
 }
 
+.closeable-body > div {
+    text-align: center;
+}
+
 .closeable-button {
     height: 0.75rem;
     background: white;
